objects/LLC_BI__Credit_Protection__c.object
<CustomObject>
    <description>This object displays the credit protection details related to the selected product(s).</description>
    <fields>
        <fullName>LLC_BI__Cost_Per_Day__c</fullName>
        <description>The system automatically populates this optional currency field to store the daily cost of this protection. By default, it is blank.</description>
        <inlineHelpText>This field stores the daily cost of this protection.</inlineHelpText>
        <label>Cost Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Per_Month__c</fullName>
        <description>The system automatically populates this optional currency field to store the monthly cost of this protection. By default, it is blank.</description>
        <inlineHelpText>This field stores the monthly cost of this protection.</inlineHelpText>
        <label>Cost Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Coverage_Result__c</fullName>
        <description>The system automatically populates this optional picklist field to store whether the coverage was fully applied, partially applied, or denied. By default, it is blank.</description>
        <inlineHelpText>This field informs the calling application if the requested coverage was fully applied, partially applied, or denied.</inlineHelpText>
        <label>Coverage Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Applied</fullName>
                </value>
                <value>
                    <fullName>Partially Applied</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Covered_Entity_Joint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this field after a user applies joint coverage to an entity. By default, it is blank.</description>
        <inlineHelpText>The system automatically populates this field after a user applies joint coverage to an entity. By default, it is blank.</inlineHelpText>
        <label>Covered Entity - Joint</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Credit Protections - Joint</relationshipLabel>
        <relationshipName>Credit_Protections_Joint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covered_Entity_Single__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this field after a user applies coverage to an entity. By default, it is blank.</description>
        <inlineHelpText>The system automatically populates this field after a user applies coverage to an entity.  By default, it is blank.</inlineHelpText>
        <label>Covered Entity - Single</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Credit Protections - Single</relationshipLabel>
        <relationshipName>Credit_Protections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Drop_Code__c</fullName>
        <description>The system automatically populates this optional number field to store a numeric code that indicates the reason the requested protection was denied. By default, it is blank.</description>
        <inlineHelpText>This field stores a numeric code that indicates the reason the requested protection was denied.</inlineHelpText>
        <label>Drop Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Drop_Reason__c</fullName>
        <description>The system automatically populates this optional text field to store a human-readable description of the reason the requested protection was denied. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field stores a human-readable description of the reason the requested protection was denied.</inlineHelpText>
        <label>Drop Reason</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this optional lookup field to determine the selected loan. By default, it is blank.</description>
        <inlineHelpText>When populated, the system uses this lookup field to determine the selected loan.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Credit Protections</relationshipLabel>
        <relationshipName>Credit_Protections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Premium__c</fullName>
        <description>The system automatically populates this optional currency field to store the total cost of this protection over the term of the loan. By default, it is blank.</description>
        <inlineHelpText>This field stores the total cost of this protection over the term of the loan.</inlineHelpText>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Option__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system uses this optional lookup field to determine the Pricing Option of the selected product. By default, it is blank.</description>
        <inlineHelpText>When populated, the system uses this lookup field to determine the Pricing Option being serviced.</inlineHelpText>
        <label>Pricing Option</label>
        <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
        <relationshipLabel>Credit Protections</relationshipLabel>
        <relationshipName>Credit_Protections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this optional lookup field to determine the product represented by this object. By default, it is blank.</description>
        <inlineHelpText>When populated, the system uses this lookup field to determine the product represented.</inlineHelpText>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Credit Protections</relationshipLabel>
        <relationshipName>Credit_Protections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional and automatically populated. This field is used to house the unique external ID of this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Credit Protection</label>
    <nameField>
        <displayFormat>Credit Protection-{00000}</displayFormat>
        <label>Credit Protection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Protections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>